--- a/src/styles/components/header.module.css
+++ b/src/styles/components/header.module.css
@@ -1,19 +1,38 @@
 .headerContainer {
-    background-color: #686AAC;
-    display: flex;
+   background-color: #f5a6a6;
+    /* display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 4rem;
-    padding: 6rem;
+    padding: 6rem; */
   }
   
+  .headerImage, .headerTitle {
+    background-color: #f5a6a6;
+    width: 50%;
+    float: left;
+  }
+
   .headerTitle {
-    font-size: 4rem;
-    color: #fff
+    font-size: 6rem;
+    color: #fff;
+    
   }
   
   .headerImage {
-    width: 40%;
+    width: 50%;
+    padding-left: 20 rem;
+  }
+
+  .divImage {
+    display: flex;
+    justify-content: center;
+  }
+
+  .divTitle {
+    display: flex;
+    justify-content: center;
+    
   }
   
