--- a/src/styles/components/footer.module.css
+++ b/src/styles/components/footer.module.css
@@ -1,5 +1,5 @@
 .footerContainer {
-    background-color: #686AAC;
+    background-color: #f79c9c;
     padding: 2rem;
     display: flex;
     justify-content: center;
