--- a/src/styles/components/header.module.css
+++ b/src/styles/components/header.module.css
@@ -1,38 +1,18 @@
 .headerContainer {
-   background-color: #f5a6a6;
-    /* display: flex;
+   background-color: #f79c9c;
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 4rem;
-    padding: 6rem; */
+    padding: 2rem;
   }
   
-  .headerImage, .headerTitle {
-    background-color: #f5a6a6;
-    width: 50%;
-    float: left;
-  }
-
   .headerTitle {
-    font-size: 6rem;
-    color: #fff;
-    
+    font-size: 4rem;
+    color: #fff
   }
   
   .headerImage {
-    width: 50%;
-    padding-left: 20 rem;
-  }
-
-  .divImage {
-    display: flex;
-    justify-content: center;
-  }
-
-  .divTitle {
-    display: flex;
-    justify-content: center;
-    
+    width: 70%;
   }
   
